--- a/config/database.yml
+++ b/config/database.yml
@@ -22,6 +22,7 @@ test:
 
 production:
   <<: *default
-  adapter: postgresql
-  encoding: unicode
-  url: <%= ENV['DATABASE_URL'] %>
+  database: db/production.sqlite3
+  # adapter: postgresql
+  # encoding: unicode
+  # url: <%= ENV['DATABASE_URL'] %>
