--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,11 +1,26 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 michael:
-  name: Michael Example
+  first_name: Example
+  last_name: Michael
+  department: 営業
+  employee_id: 0000001
   email: michael@example.com
   password_digest: <%= User.digest('password') %>
 
 archer:
-  name: Sterling Archer
-  email: duchess@example.gov
+  first_name: Example
+  last_name: Mike
+  department: 開発
+  employee_id: 0000002
+  email: mike@example.com
   password_digest: <%= User.digest('password') %>
+
+yuta:
+  first_name: Example
+  last_name: yuta
+  department: 営業
+  employee_id: 0000003
+  email: yuta@example.com
+  password_digest: <%= User.digest('password') %>
+  admin: true
