--- a/test/fixtures/works.yml
+++ b/test/fixtures/works.yml
@@ -1,10 +1,13 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
+
 orange:
   comment: "I just ate an orange!"
   created_at: "2023-02-19 18:46:19"
   start_time: "2023-02-19 15:46:19"
   end_time: "2023-02-19 18:46:19"
+  date: Date.new(2024, 2, 24)
+  break_time: "01:00"
   user: michael
 
 tau_manifesto:
@@ -12,6 +15,8 @@ tau_manifesto:
   created_at: "2023-05-19 18:46:19"
   start_time: "2023-05-19 15:46:19"
   end_time: "2023-05-19 18:46:19"
+  date: Date.new(2024, 2, 24)
+  break_time: "01:00"
   user: michael
 
 cat_video:
@@ -19,6 +24,8 @@ cat_video:
   created_at: "2023-07-19 18:46:19"
   start_time: "2023-07-19 15:46:19"
   end_time: "2023-07-19 18:46:19"
+  date: Date.new(2024, 2, 24)
+  break_time: "01:00"
   user: michael
 
 most_recent:
@@ -26,4 +33,6 @@ most_recent:
   created_at: "2024-02-19 18:46:19"
   start_time: "2024-02-19 15:46:19"
   end_time: "2024-02-19 18:46:19"
+  date: Date.new(2024, 2, 24)
+  break_time: "01:00"
   user: michael
